--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/test.css"/>
 </head>
 <body>
-    dskfjl
+    <div id="content"></div>
     <script src="js/app.js"></script>
 </body>
 </html>
