--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="css/test.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
 </head>
+
 <body>
     <div id="content"></div>
     <script src="js/app.js"></script>
